feat: add inputs and button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 <body>
   <h1 class="title">Conway's Game of Life</h1>
-  <canvas class="field"></canvas>
+  <form>
+    <label>Please, enter width and height <input type="number" id="field-width" placeholder="Width" min="10"> <input
+        type="number" id="field-height" placeholder="Height" min="10"></label>
+    <button type="button">Submit</button>
+  </form>
+  <canvas class="field">Your browser doesn't support canvas!</canvas>
   <script src="./app.js"></script>
 </body>
 
